# proofer

./: .gitignore  README.md  requirements.txt  setup.cfg  symbols.txt
.github/workflows/: pythonpackage.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  parser.html  py-modindex.html  rules.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  parser.rst.txt  rules.rst.txt
docsource/: Makefile  make.bat
docsource/source/: conf.py  parser.rst  rules.rst
proofer/: __init__.py  informations.py  parser.py  rules.py
tests/: test_information.py  test_parser.py  test_rules.py
